--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@ body.custom-background { background-image: url("https://moquietosas.github.io/el
                 var p = l;
                 r();
             })([]);
-        </script><script src="ellenparty/static/js/2.e426ef93.chunk.js"></script><script src="ellenparty/static/js/main.9fef4669.chunk.js"></script></div>
+        </script><script src="/static/js/2.e426ef93.chunk.js"></script><script src="/static/js/main.9fef4669.chunk.js"></script></div>
 			</div> 
 			</div> 
 				
